# Piscine-Python

./: notes  script_linux.txt  script_mac.txt
P00/ex00/: answers.txt  requirements.txt
P00/ex01/: exec.py
P00/ex02/: whois.py
P00/ex03/: count.py
P00/ex04/: operations.py
P00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
P00/ex06/: recipe.py
P00/ex07/: filterwords.py
P00/ex08/: sos.py
P00/ex09/: guess.py
P00/ex10/: loading.py  test.py
P01/ex00/: book.py  recipe.py  test.py
P01/ex01/: game.py  test.py
P01/ex02/: test.py  vector.py
P01/ex03/: generator.py  test.py
P01/ex04/: eval.py  test.py
P01/ex05/: test2.py  the_bank.py
P02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py  test.py
P02/ex01/: main.py
P02/ex02/: logger.py
P02/ex03/: bad.csv  csvreader.py  good.csv  test.py
P02/ex04/: README.md  build.sh  setup.cfg  setup.py  test.py  test_logger.py  test_progressbar.py
P02/ex04/src/my_minipack/: __init__.py  logger.py  progressbar.py
P02/ex04/src/my_minipack.egg-info/: PKG-INFO  SOURCES.txt
P02/ex04/srcs/my_minipack.egg-info/: PKG-INFO  SOURCES.txt
P02/ex04/tmp_env/: pyvenv.cfg
P03/ex00/: NumPyCreator.py  test.py
P03/ex01/: ImageProcessor.py  test.py
P03/ex02/: ScrapBooker.py  test.py
P03/ex03/: ColorFilter.py  test.py
P03/ex04/: Kmeans.py  csvreader.py  solar_system_census.csv
P04/ex00/: test.py
P04/ex01/: YoungestFellah.py  test.py
P04/ex02/: ProportionBySport.py  test.py
P04/ex03/: HowManyMedals.py  test.py
P04/ex04/: SpatioTemporalData.py  test.py
P04/ex05/: FileLoader.py  test.py  (+1 more)
(+4 files in other folders)
